# target-assistant-bot

./: .coveragerc  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .secrets.baseline  02 План Разработки (Детализированный Чек-лист).md  CHANGELOG.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_CHECKLIST_EN.md  Dockerfile  LICENSE  LOCAL_DEV_PLAN.md  README.md  README_EN.md  README_FIXED.md  config.py  docker-compose.yml  env.example  implementation-plan.md  main.py  mypy.ini  pyproject.toml  pytest.ini  release_notes_v0.2.2.md  requirements.txt  setup.sh  setup_commands.py  texts.py  Анализ и рекомендации по улучшению проекта Target Assistant Bot.md  Краткое описание проекта.docx  Пояснение к проекту Умный Ассистент (для судей).docx  Рекомендации по улучшению разработки 1.md  Рекомендации по улучшению разработки 2.md  Технический анализ и план развития проекта.md  Техническое Задание (ТЗ) на разработку Telegram-бота Персональный Ассистент Целей.md  Чек-лист разработки (отмечать выполненное).md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
AnotherCrewCode/: README.md  bot.py  config.py  core.py  google_credentials.json  llm_client.py  requirements.txt  scheduler.py
OLD/: gsheet.py  llm.py  tests.py
core/: dependency_injection.py  exceptions.py  goal_manager.py  interfaces.py  metrics.py  models.py
deploy/: targetbot.service  update-bot.sh
docs/: SENTRY_INTEGRATION_DEBUG_LOG.md  architecture.md  development-rules.md  examples.md  faq.md  google_sheets_setup.md  install_ubuntu.md  install_ubuntu_detailed.md  user_guide.md
domain/: __init__.py
handlers/: common.py  goal_setting.py  goals.py  task_management.py  task_management_async.py
llm/: async_client.py  client.py  prompts.py
presentation/: __init__.py
scheduler/: tasks.py
scripts/: analyze_dependencies.py  check_pages_status.py  forbid_placeholders.py  retry_pages_deploy.py
sheets/: async_client.py  client.py
tests/: conftest.py  test_async_fix.py  test_async_llm_client.py  test_async_sheets_manager.py  test_basic_imports.py  test_common_handlers.py  test_config.py  test_core_dependency_injection.py  test_core_exceptions.py  test_core_models.py  test_emoji_system_extended.py  test_goal_manager.py  test_goal_manager_async.py  test_goals_handlers.py  test_handlers_common_enhanced.py  test_helpers.py  test_http_client.py  (+19 more)
(+50 files in other folders)
